refactored runtime flow